758831 - Adjusts the z-index on tupane details and sliding tree slide ups in order to prevent clipping of tupane on top of slide up containers.

--- a/app/stylesheets/widgets/slidingtree.scss
+++ b/app/stylesheets/widgets/slidingtree.scss
@@ -44,7 +44,7 @@
     float: left;
     bottom: 31px;
     left: 0px;
-    z-index: 300;
+    z-index: 10;
     margin-left: 1px;
     height: 250px;
     background-color:$panel_color;
